--- a/Favorite-Toys/app/src/main/res/layout/activity_main.xml
+++ b/Favorite-Toys/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+   <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_numbers"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</FrameLayout>
+<!--
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -59,3 +71,4 @@
             android:visibility="invisible" />
     </FrameLayout>
 </LinearLayout>
+-->
